# pdf-docat

./: .gitignore  .gitmodules  .replit  CREDENTIAL_MIGRATION_GUIDE.md  DEPLOYMENT_GUIDE.md  Dockerfile  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  REPLIT_DEPLOYMENT_SUMMARY.md  docker-compose.production.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  test-connection.html  test-connection.js
PDFMathTranslate/: setup.py
PDFMathTranslate/pdf2zh/: __init__.py  config.py  high_level.py  translator.py
PDFMathTranslate/pdf2zh.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
attached_assets/: Pasted-The-error-message-x-clerk-auth-message-Invalid-JWT-form-A-JWT-consists-of-three-parts-separate-1745469712299.txt  content-1745467227461.md
backend-api/: .gitignore  Dockerfile  README.md  main.py  requirements.txt  setup.py
client/: index.html
client/src/: App.tsx  index.css
deployment_scripts/: README.md  configure_sqlite.sh  deploy_production.sh  setup_all.sh  setup_backend.sh  setup_frontend.sh  update_frontend_api.sh
frontend-app/: .env.example  README.md  package.json  vite.config.ts
frontend-app/src/: App.tsx
legacy_backup/: README.md
legacy_backup/scripts/: README.md  README_GEMINI_25.md  pdf_service.py  pdf_service_async.py  setup_python_env.sh  start_pdf_service.sh  test_gemini_model.py  (+2 more)
python-backend/: .env.example  .gitignore  Dockerfile  Dockerfile.production  IMAGE_DETECTION_README.md  README.md  README_REPLIT.md  SECURITY.md  docker-compose.yml  env.example  init_database.py  main.py  main_replit.py  migrate_env_to_db.py  mock_pydantic.py  mock_pymupdf.py  requirements-fixed.txt  requirements-production.txt  requirements-replit.txt  requirements.txt  run.py  security_audit.py  start_server.py  test_db_connection.py  test_image_detection.py  test_import.py  test_pdftranslate.py  test_replit_deployment.py  verify_db_config.py
server/: index.ts  routes.ts  storage.ts
shared/: schema.ts
(+92 files in other folders)
