[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.7.4,<1.8.0",
    "bcrypt>=3.2.0,<3.3.0",
    "email-validator>=2.2.0",
    "fastapi>=0.68.0,<0.69.0",
    "gunicorn>=20.1.0,<20.2.0",
    "passlib>=1.7.4,<1.8.0",
    "psycopg2-binary>=2.9.1,<2.10.0",
    "pydantic>=1.8.0,<2.0.0",
    "python-dotenv>=0.19.1,<0.20.0",
    "python-jose>=3.3.0,<3.4.0",
    "python-multipart>=0.0.5,<0.0.6",
    "requests>=2.32.3",
    "sqlalchemy>=1.4.0,<1.5.0",
    "uvicorn>=0.15.0,<0.16.0",
]
